[project]
name = "adt-receiver"
version = "0.1.0"
description = "HL7 ADT message receiver — accepts all ADT trigger events via MLLP and enqueues to Azure Service Bus"
requires-python = ">=3.13"

dependencies = [
    "azure-servicebus==7.14.2",
    "azure-identity==1.23.0",
    "hl7apy==1.3.5",
    "message-bus-lib",
    "health-check-lib",
    "event-logger-lib",
    "metric-sender-lib",
]

[dependency-groups]
dev = [
  "ruff==0.14.9",
  "bandit==1.9.2",
  "mypy==1.18.2",
  "uv-secure[faster-async]==0.12.0",
]

[tool.uv.sources]
message-bus-lib = { path = "../shared_libs/message_bus_lib" }
health-check-lib = { path = "../shared_libs/health_check_lib" }
event-logger-lib = { path = "../shared_libs/event_logger_lib" }
metric-sender-lib = { path = "../shared_libs/metric_sender_lib" }

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "A",
  "PLC",
  "PLE",
  "PLW",
  "I",
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]
