
[project]
# Basic project information
name = "BusWatch"
version = "0.1.0"
description = "Tool for peeking at message on a service bus queue"
requires-python = ">=3.14"

# Runtime dependencies - packages required to run the application
dependencies = [
    "fastapi==0.117.1",
    "jinja2==3.1.6",
    "uvicorn==0.37.0",
    "azure-servicebus==7.14.2",

]

# Development dependencies - packages only needed during development
[dependency-groups]
dev = [
  # ruff: Fast Python linter and code formatter
  "ruff==0.14.9",
  
  # mypy: Static type checker for Python
  "mypy==1.18.2",
  
  # pytest: Testing framework
  "pytest>=7.0.0",
]

# ===================================================================
# Tool Configuration
# ===================================================================

# mypy configuration - static type checking
[tool.mypy]
python_version = "3.13"
# Require type hints on all function definitions
disallow_untyped_defs = true

# ruff configuration - linting and formatting
[tool.ruff]
# Maximum line length before wrapping
line-length = 120

# Configure which linting rules to enable
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined variables, etc.)
  "W",   # pycodestyle warnings
  "I"    # isort (import sorting)
]