
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
# Basic project information
name = "BusWatch"
version = "0.1.0"
description = "Tool for peeking at message on a service bus queue"
requires-python = ">=3.13"

# Runtime dependencies - packages required to run the application
dependencies = [
  "fastapi==0.135.3",
  "starlette==0.49.1",
    "jinja2==3.1.6",
    "uvicorn==0.37.0",
    "azure-servicebus==7.14.2",

]

# Development dependencies - packages only needed during development
[dependency-groups]
dev = [
  # ruff: Fast Python linter and code formatter
  "ruff==0.14.9",
  
  # mypy: Static type checker for Python
  "mypy==1.18.2",

    "bandit==1.9.2",
]

# ===================================================================
# Tool Configuration
# ===================================================================

# mypy configuration - static type checking
[tool.mypy]
python_version = "3.13"
# Require type hints on all function definitions
disallow_untyped_defs = true

# ruff configuration - linting and formatting
[tool.ruff]
# Maximum line length before wrapping
line-length = 120

# Configure which linting rules to enable
[tool.ruff.lint]
select = [
  "E",  # Enforces style guide rules (Pycodestyle errors).
  "F",  # Detects various errors in Python code (Pyflakes errors).
  "W",  # Enforces style guide warnings (Pycodestyle warnings).
  "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
  "PLC",  # Enforces coding conventions (Pylint convention messages).
  "PLE",  # Detects errors in Python code (Pylint error messages).
  "PLW",  # Detects potential issues in Python code (Pylint warning messages).
  "I"  # Sorts and organizes imports (Import-related rules).
]

[tool.setuptools.packages.find]
where = ["."]
include = ["buswatch*"]

[tool.setuptools.package-data]
buswatch = ["templates/*.html", "static/*"]