[project]
name = "integration-hub-dashboard"
version = "0.1.0"
description = "NHS Wales Integration Hub monitoring dashboard"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-mgmt-appcontainers>=4.0.0",
    "azure-mgmt-servicebus>=9.0.0",
    "azure-monitor-query>=2.0.0",
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
dashboard = "app:app"


