[project]
name = "hl7-transformer"
version = "0.1.0"
description = "HL7v2 transformer"

requires-python = ">=3.13"

dependencies = [
  "azure-servicebus==7.14.2",
  "azure-identity==1.21.0",
  "hl7apy==1.3.5",
  "message-bus-lib",
  "health-check-lib",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
health-check-lib = { path = "../shared_libs/health_check_lib", editable = false }
message-bus-lib = { path = "../shared_libs/message_bus_lib", editable = false }
