[project]
name = "message-replay-job"
version = "0.1.0"
description = "Container App Job for replaying stored HL7 messages to Service Bus"
requires-python = ">=3.13"

dependencies = [
  "azure-core>=1.38.0",
  "azure-servicebus==7.14.2",
  "pyodbc>=5.2.0",
  "message-bus-lib",
  "event-logger-lib",
]

[dependency-groups]
dev = [
  "ruff==0.15.1",
  "bandit==1.9.3",
  "mypy==1.19.1",
  "uv-secure[faster-async]==0.16.0",
]

[tool.uv.sources]
message-bus-lib = { path = "../shared_libs/message_bus_lib" }
event-logger-lib = { path = "../shared_libs/event_logger_lib" }

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # Enforces style guide rules (Pycodestyle errors).
  "F",  # Detects various errors in Python code (Pyflakes errors).
  "W",  # Enforces style guide warnings (Pycodestyle warnings).
  "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
  "PLC",  # Enforces coding conventions (Pylint convention messages).
  "PLE",  # Detects errors in Python code (Pylint error messages).
  "PLW",  # Detects potential issues in Python code (Pylint warning messages).
  "I"  # Sorts and organizes imports (Import-related rules).
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]  # Stops asserts in tests being flagged.
