# pyproject.toml - Training HL7 Sender Configuration
# =========================================================
# This file defines the project metadata, dependencies, and tool settings
# for the Week 3 training sender component.

[project]
# Basic project information
name = "training-hl7-sender"
version = "0.1.0"
description = "Training HL7 Sender - MVP for learning MLLP message sending"
requires-python = ">=3.13"

# Runtime dependencies - packages required to run the application
dependencies = [
    # hl7apy: Python library for parsing and creating HL7 messages
    # Used to parse ACK messages from the mock receiver
    "hl7apy==1.3.5",
    
    # hl7: Python library for MLLP communication over TCP
    # Used to send HL7 messages to the mock receiver
    "hl7==0.4.5",
    
    # Azure Service Bus - for reading from egress queue
    "azure-servicebus==7.14.2",
    
    # Azure Identity - for authentication (used with Service Bus)
    "azure-identity>=1.23.0",
    
    # Shared libraries from the Integration Hub project
    # These provide common functionality used across all components
    
    # message-bus-lib: Service Bus client factory and receiver clients
    # Provides ServiceBusClientFactory, MessageReceiverClient
    "message-bus-lib",
    
    # processor-manager-lib: Signal handling for graceful shutdown
    # Provides ProcessorManager for SIGINT/SIGTERM handling
    "processor-manager-lib",
]

# Tell uv where to find the shared_libs
# These path references allow uv to install local packages from the shared_libs folder
[tool.uv.sources]
message-bus-lib = { path = "../shared_libs/message_bus_lib" }
processor-manager-lib = { path = "../shared_libs/processor_manager_lib" }

# Development dependencies - packages only needed during development
[dependency-groups]
dev = [
  # ruff: Fast Python linter and code formatter
  "ruff==0.14.9",
  
  # mypy: Static type checker for Python
  "mypy==1.18.2",
  
  # pytest: Testing framework
  "pytest>=7.0.0",
]

# ===================================================================
# Tool Configuration
# ===================================================================

# mypy configuration - static type checking
[tool.mypy]
python_version = "3.13"
# Require type hints on all function definitions
disallow_untyped_defs = true

[tool.ruff]
# Maximum line length before wrapping
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined variables, etc.)
  "W",   # pycodestyle warnings
  "I"    # isort (import sorting)
]