[project]
name = "training-hl7-server"
version = "0.1.0"
description = "HL7v2 training server"
requires-python = ">=3.13"

dependencies = [
    "hl7apy==1.3.5",
]

[dependency-groups]
dev = [
  "ruff==0.14.9",
  "bandit==1.9.2",
  "mypy==1.18.2",
  "uv-secure[faster-async]==0.12.0",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # Enforces style guide rules (Pycodestyle errors).
  "F",  # Detects various errors in Python code (Pyflakes errors).
  "W",  # Enforces style guide warnings (Pycodestyle warnings).
  "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
  "PLC",  # Enforces coding conventions (Pylint convention messages).
  "PLE",  # Detects errors in Python code (Pylint error messages).
  "PLW",  # Detects potential issues in Python code (Pylint warning messages).
  "I"  # Sorts and organizes imports (Import-related rules).
]