# pyproject.toml - Training HL7 Transformer Configuration
# =========================================================
# This file defines the project metadata, dependencies, and tool settings
# for the Week 2 training transformer component.

[project]
# Basic project information
name = "training-hl7-transformer"
version = "0.1.0"
description = "Training HL7 Transformer - MVP for learning message transformation"
requires-python = ">=3.13"

# Runtime dependencies - packages required to run the application
dependencies = [
    # hl7apy: Python library for parsing and creating HL7 messages
    # Used to parse incoming messages and build transformed output
    "hl7apy==1.3.5",
    
    # Azure Service Bus - for reading from ingress queue and publishing to egress queue
    "azure-servicebus==7.14.2",

    # Azure Identity - for authentication (used with Service Bus)
    "azure-identity>=1.23.0",
    
    # Shared libraries from the Integration Hub project
    # These provide common functionality used across all transformers
    
    # message-bus-lib: Service Bus client factory and sender/receiver clients
    # Provides ServiceBusClientFactory, MessageSenderClient, MessageReceiverClient
    "message-bus-lib",
    
    # Note that the transformer-base-lib (used as a base class for prod transformers) is NOT USED IN TRAINING.
    # We'll build our own simpler version to understand the pattern.
    
    # field-utils-lib: Utilities for copying and manipulating HL7 fields
    # Provides get_hl7_field_value, copy_segment_fields_in_range
    "field-utils-lib",
]

# Tell uv where to find the shared_libs
# These path references allow uv to install local packages from the shared_libs folder
[tool.uv.sources]
message-bus-lib = { path = "../shared_libs/message_bus_lib" }
field-utils-lib = { path = "../shared_libs/field_utils_lib" }

# Development dependencies - packages only needed during development
[dependency-groups]
dev = [
  # ruff: Fast Python linter and code formatter
  "ruff==0.14.9",
  
  # mypy: Static type checker for Python
  "mypy==1.18.2",
  
  # pytest: Testing framework
  "pytest>=7.0.0",
]

# ===================================================================
# Tool Configuration
# ===================================================================

# mypy configuration - static type checking
[tool.mypy]
python_version = "3.13"
# Require type hints on all function definitions
disallow_untyped_defs = true

# ruff configuration - linting and formatting
[tool.ruff]
# Maximum line length before wrapping
line-length = 120

# Configure which linting rules to enable
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined variables, etc.)
  "W",   # pycodestyle warnings
  "I"    # isort (import sorting)
]
