[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-designer"
version = "0.1.0"
description = "NHS Wales Integration Hub — Terraform Workflow Designer"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "jinja2>=3.1.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.9",
    "bandit==1.9.2",
    "mypy==1.18.2",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E","F","W","A","PLC","PLE","PLW","I"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_designer*"]

[tool.setuptools.package-data]
workflow_designer = ["templates/*.html"]
