[project]
name = "inthub-wpas-validator"
version = "0.0.1"
description = "WPAS Xml valitator for DHCW Integration Hub"

dependencies = [
"python==3.13",
"azure-servicebus==7.14.2",
"azure-identity==1.21.0",
"hl7apy==1.3.5",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"

[tool.poetry.scripts]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # Enforces style guide rules (Pycodestyle errors).
    "F",  # Detects various errors in Python code (Pyflakes errors).
    "W",  # Enforces style guide warnings (Pycodestyle warnings).
    "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
    "PLC",  # Enforces coding conventions (Pylint convention messages).
    "PLE",  # Detects errors in Python code (Pylint error messages).
    "PLW",  # Detects potential issues in Python code (Pylint warning messages).
    "I"  # Sorts and organizes imports (Import-related rules).
]

[tool.coverage.report]
skip_empty = true  # Don't show files which have no statements.

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]  # Stops asserts in tests being flagged.

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
