[build-system]  
requires = ["setuptools>=61.0"]  
build-backend = "setuptools.build_meta"  

[project]  
name = "health-check-lib"  
version = "0.1.0"  
description = "Container App Health Check library"  
authors = [{name = "DHCW"}]  
requires-python = ">=3.13"  
readme = "README.md"  
license = {text = "MIT"}  
classifiers = [  
    "Programming Language :: Python :: 3",  
    "Operating System :: OS Independent",  
]  
dependencies = [  
    "setuptools==80.0.0",  
]  

[tool.setuptools.packages.find]  
where = ["."]  
include = ["health_check_lib*"]  