[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7_validation_lib"
version = "0.1.0"
description = "HL7 v2 ER7 to XML conversion and XML Schema validation"
authors = [{name = "DHCW"}]
 requires-python = ">=3.10"
readme = "IMPLEMENTATION.md"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
 dependencies = [
   "hl7apy==1.3.5",
   "xmlschema==3.4.3",
 ]

[tool.setuptools.packages.find]
where = ["."]
include = ["hl7_validation*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"hl7_validation" = ["resources/*.xsd", "resources/**/*.xsd", "resources/*.json"]


