[project]
name = "hl7-xml"
version = "0.1.0"
description = "Xml serialization for HL7v2"
authors = [{name = "DHCW"}]  
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}  
classifiers = [  
    "Programming Language :: Python :: 3",  
    "Operating System :: OS Independent",  
]  
dependencies = [
  "hl7apy==1.3.5",
  "lxml>=6.0.0",
  "lxml-stubs>=0.5.1",
]  

[dependency-groups]
dev = [
  "ruff==0.11.11",
  "bandit==1.8.6",
  "mypy==1.15.0",
  "uv-secure[faster-async]==0.11.1",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # Enforces style guide rules (Pycodestyle errors).
  "F",  # Detects various errors in Python code (Pyflakes errors).
  "W",  # Enforces style guide warnings (Pycodestyle warnings).
  "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
  "PLC",  # Enforces coding conventions (Pylint convention messages).
  "PLE",  # Detects errors in Python code (Pylint error messages).
  "PLW",  # Detects potential issues in Python code (Pylint warning messages).
  "I"  # Sorts and organizes imports (Import-related rules).
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]  # Stops asserts in tests being flagged.
