[build-system]  
requires = ["setuptools>=61.0"]  
build-backend = "setuptools.build_meta"  

[project]  
name = "message-bus-lib"  
version = "0.1.0"  
description = "Azure Service Bus helper library"  
authors = [{name = "DHCW"}]  
requires-python = ">=3.13"  
readme = "README.md"  
license = {text = "MIT"}  
classifiers = [  
    "Programming Language :: Python :: 3",  
    "Operating System :: OS Independent",  
]  
dependencies = [  
    "azure-core>=1.38.0",
    "azure-servicebus==7.14.2",  
    "azure-identity==1.23.0",  
    "urllib3>=2.6.3",
    "setuptools==80.9.0",  
]  

[dependency-groups]
dev = [
  "ruff==0.15.0",
  "bandit==1.9.2",
  "mypy==1.18.2",
  "uv-secure[faster-async]==0.16.0",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # Enforces style guide rules (Pycodestyle errors).
  "F",  # Detects various errors in Python code (Pyflakes errors).
  "W",  # Enforces style guide warnings (Pycodestyle warnings).
  "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
  "PLC",  # Enforces coding conventions (Pylint convention messages).
  "PLE",  # Detects errors in Python code (Pylint error messages).
  "PLW",  # Detects potential issues in Python code (Pylint warning messages).
  "I"  # Sorts and organizes imports (Import-related rules).
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]  # Stops asserts in tests being flagged.

[tool.setuptools.packages.find]  
where = ["."]  
include = ["message_bus_lib*"]  
